# CleveresTricky

./: CHANGELOG.md  DONATE.md  README.md  build.gradle.kts  get_action.py  get_gh_default_setup.py  get_sections.py  libcertgen.rs  patch_bcc.py  patch_cpp.py  pr_body.txt  pr_description.txt  search.py  search2.py  search3.py  search4.py  search5.py  search_ghas.py  settings.gradle.kts  test_plan.md  test_yaml.py  update.json
.github/workflows/: build.yml
gradle/: libs.versions.toml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp
module/src/main/cpp/inject/: main.cpp
module/template/: action.sh  common_func.sh  customize.sh  post-fs-data.sh  sepolicy.rule
rust/cbor-cose/include/: cleverestricky_cbor_cose.h
rust/cbor-cose/src/: apex.rs  bcc.rs  ffi.rs  hardware_sim.rs  lib.rs  play_integrity.rs
service/: build.gradle.kts  proguard-rules.pro
service/src/main/java/cleveres/tricky/cleverestech/: BootLogic.kt  CboxManager.kt  Config.kt  DrmInterceptor.kt  KeystoreInterceptor.kt  RkpInterceptor.kt  SecurityLevelInterceptor.kt  TelephonyInterceptor.kt  VbMetaParser.kt  WebServer.kt  WebUiConfig.kt  util.kt
service/src/main/java/cleveres/tricky/cleverestech/util/: DeviceKeyManager.kt  KeyboxFetcher.kt  KeyboxVerifier.kt
service/src/main/res/xml/: network_security_config.xml
service/src/test/java/cleveres/tricky/cleverestech/: CboxManagerSafetyTest.kt  ConfigPatchLevelSharedUidTest.kt  ConfigPatchLevelTest.kt  DeviceRecallProtectionTest.kt  DrmInterceptorPerfTest.kt  WebUiLaunchSafetyTest.kt  WebUiSafetyTest.kt
service/src/test/java/cleveres/tricky/cleverestech/util/: KeyboxFetcherPerfTest.kt  KeyboxFetcherTest.kt
stub/: build.gradle.kts
